2005-11-04  David Harrison  <harrison@apple.com>

        Reviewed by John Sullivan.

        Test case added:
        * manual-tests/whitespace-pre-affinity.html

        http://bugzilla.opendarwin.org/show_bug.cgi?id=3739

        This patch addresses the root cause of the problem by making
        RenderText::inlineBox() cope with the fact that in white-space:pre text the
        newline characters are not part of any InlineTextBox... they lie "between"
        them.	Now DOWNSTREAM affinity selects the next text box only if the offset
        that is past the current box is actually _in_ the next box.
        
        * khtml/rendering/render_text.cpp:
        (RenderText::inlineBox):

2005-11-04  Darin Adler  <darin@apple.com>

        - removed unused duplicate copy of hash table code

        * khtml/misc/hashfunctions.h: Removed.
        * khtml/misc/hashmap.h: Removed.
        * khtml/misc/hashset.h: Removed.
        * khtml/misc/hashtable.cpp: Removed.
        * khtml/misc/hashtable.h: Removed.
        * khtml/misc/hashtraits.h: Removed.
        * khtml/misc/pointerhash.h: Removed.

2005-11-03  Evan Gross  <evan@rainmakerinc.com>

        Bugzilla 5604: plainText (visible_text.cpp) performance improvement
        
        Reviewed by justin and darin
        
        Optimized plainText for a ~100% speedup in most cases.
        
        No test cases added, change only effects performance.

        * khtml/editing/visible_text.cpp:
        (khtml::TextIterator::rangeLength): Removed an extraneous comment.
        (khtml::plainText): The length of the string to be created was 
        pre-calculated to avoid the expense of many QString::append() calls.
        Removed this since TextIterator::advance() is much more expensive 
        than append.

2005-11-03  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Darin and Vicki.

        * WebCore.xcodeproj/project.pbxproj:
          Change to use $(SYSTEM_LIBRARY_DIR) consistently and place