@@ -1223,6 +1223,8 @@ void RenderBlock::paint(PaintInfo& i, int _tx, int _ty)
         bool intersectsOverflowBox = overflowBox.intersects(i.r);
         if (!intersectsOverflowBox) {
             // Check floats next.
+            if (i.phase != PaintActionFloat)
+                return;
             QRect floatBox = floatRect();
             floatBox.inflate(maximalOutlineSize(i.phase));
             floatBox.setX(floatBox.x() + _tx);
@@ -2042,7 +2044,7 @@ RenderBlock::floatBottom() const
 QRect RenderBlock::floatRect() const
 {
     QRect result(borderBox());
-    if (!m_floatingObjects)
+    if (!m_floatingObjects || hasOverflowClip())
         return result;
     FloatingObject* r;
     QPtrListIterator<FloatingObject> it(*m_floatingObjects);
@@ -2463,6 +2465,8 @@ bool RenderBlock::nodeAtPoint(NodeInfo& info, int _x, int _y, int _tx, int _ty,
         bool insideOverflowBox = overflowBox.contains(_x, _y);
         if (!insideOverflowBox) {
             // Check floats next.
+            if (hitTestAction != HitTestFloat)
+                return;
             QRect floatBox = floatRect();
             floatBox.setX(floatBox.x() + tx);
             floatBox.setY(floatBox.y() + ty);
